# python-templete

./: .coveragerc  .env.template  .pre-commit-config.yaml  CLAUDE.md  pyproject.toml  pyrightconfig.json  pytest.ini  ruff.toml
