[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-template"
version = "0.1.0"
description = "A modern Python project template"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    # Add your dependencies here
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-anyio>=0.7.0",
    "anyio>=4.0.0",
    "ruff>=0.1.0",
    "pyright>=1.1.350",
    "pre-commit>=3.6.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/username/python-template"
Repository = "https://github.com/username/python-template"
Documentation = "https://username.github.io/python-template"
Issues = "https://github.com/username/python-template/issues"
